fixed menu, and z-index of some elements

--- a/reconecta-styles.css
+++ b/reconecta-styles.css
@@ -18,10 +18,12 @@
     color:#ffffff;
     font-family: 'Raleway', sans-serif;
     font-weight: normal;
-    margin:18px 30px 0 0;
+    text-align: center;
+    padding: 23px 30px!important;
 }
 
-.formacion{
+
+.formacion2{
     margin-right:200px;
 }
 
@@ -34,12 +36,14 @@
     margin: auto;
 }
 
+.navbar-expand-lg .navbar-nav .nav-link {
+    padding-right: .5rem;
+    padding-left: 2.5rem;
+}
+
 .logo{
     width: 80px;
-    position: absolute;
-    z-index: 0;
-    left: 717px;
-    top: 30px;  
+ 
 }
 
 /*Banner*/
