--- a/reencuentra-styles.css
+++ b/reencuentra-styles.css
@@ -18,10 +18,12 @@
     color:#ffffff;
     font-family: 'Raleway', sans-serif;
     font-weight: normal;
-    margin:18px 30px 0 0;
+    text-align: center;
+    padding: 23px 30px!important;
 }
 
-.formacion{
+
+.formacion2{
     margin-right:200px;
 }
 
@@ -34,12 +36,14 @@
     margin: auto;
 }
 
+.navbar-expand-lg .navbar-nav .nav-link {
+    padding-right: .5rem;
+    padding-left: 2.5rem;
+}
+
 .logo{
     width: 80px;
-    position: absolute;
-    z-index: 0;
-    left: 715px;
-    top: 30px;  
+ 
 }
 
 /*Banner*/
@@ -165,8 +169,8 @@
     width: 130px;
     position: absolute;
     z-index: 0;
-    left: 170px;
-    top: 1133px;
+    left: 0;
+    top: 1085px;
 }
 
 .herramientas {
@@ -233,11 +237,7 @@
 
 @media only screen and (max-width:1199px) {
     .logo{
-        width: 80px;
-        position: absolute;
-        z-index: 0;
-        left: 717px;
-        top: 30px;  
+        width: 0;
     }
 }
 
